# cooking

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
alembic/: env.py
app/: main.py
app/core/: config.py
app/db/: base.py  session.py
app/documents/vision/: vision_document.md
